--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@ checkpoints/IXI/netG_A2B.pth filter=lfs diff=lfs merge=lfs -text
 checkpoints/BraTS2015/netG_A2B.pth filter=lfs diff=lfs merge=lfs -text
 checkpoints/OASIS3/netG_A2B.pth filter=lfs diff=lfs merge=lfs -text
 netG_A2B.pth filter=lfs diff=lfs merge=lfs -text
+checkpoints/GMM-GAN/IXI/netG_A2B.pth filter=lfs diff=lfs merge=lfs -text
+checkpoints/GMM-GAN/BraTS2015/netG_A2B.pth filter=lfs diff=lfs merge=lfs -text
+checkpoints/GMM-GAN/OASIS3/netG_A2B.pth filter=lfs diff=lfs merge=lfs -text
